assignment8/.metadata/.plugins/org.eclipse.cdt.ui/assign8Q1.build.log
15:01:27 **** Incremental Build of configuration Debug for project assign8Q1 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:51:1: error: unknown type name 'UART_HandleTypeDef'; did you mean 'DMA_HandleTypeDef'?
   51 | UART_HandleTypeDef huart2;
      | ^~~~~~~~~~~~~~~~~~
      | DMA_HandleTypeDef
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:102:3: warning: implicit declaration of function 'HAL_UART_Transmit' [-Wimplicit-function-declaration]
  102 |   HAL_UART_Transmit(&huart2, ( uint8_t *)msg,strlen(msg),HAL_MAX_DELAY);
      |   ^~~~~~~~~~~~~~~~~
../Core/Src/main.c:112:7: warning: implicit declaration of function 'HAL_UART_Receive' [-Wimplicit-function-declaration]
  112 |       HAL_UART_Receive(&huart2, &rx_byte, 1, HAL_MAX_DELAY);
      |       ^~~~~~~~~~~~~~~~
../Core/Src/main.c: At top level:
../Core/Src/main.c:60:13: warning: 'MX_USART2_UART_Init' used but never defined
   60 | static void MX_USART2_UART_Init(void);
      |             ^~~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

15:01:27 Build Failed. 2 errors, 3 warnings. (took 550ms)

